# RAPTOR-XTDrone

./: .gitignore  AGENTS.md  README.md
PX4_Firmware/: Makefile
PX4_Firmware/Tools/sitl_gazebo/models/iris_raptor/: iris_raptor.sdf  model.config
PX4_Firmware/Tools/sitl_gazebo/worlds/: empty_raptor_400.world  robocup.world
PX4_Firmware/cmake/: px4_git.cmake
PX4_Firmware/launch/: robocup.launch
PX4_Firmware/msg/: actuator_motors.msg
PX4_Firmware/src/lib/mixer_module/: mixer_module.cpp  mixer_module.hpp
PX4_Firmware/src/lib/version/: CMakeLists.txt  version.c
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/: CMakeLists.txt  package.xml
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/include/: FWcmd.h  FWstates.h  Formation_control_states.h  Fw_cmd_mode.h  Fw_current_mode.h  Fwmonitor.h  Leaderstates.h
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/launch/: fixed_wing_formation_control.launch  fixed_wing_formation_control1.launch  fixed_wing_formation_control_leader.launch
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/msg/: FWcmd.msg  FWstates.msg  Formation_control_states.msg  Fw_cmd_mode.msg  Fw_current_mode.msg  Fwmonitor.msg  Leaderstates.msg
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/scripts/: Readme.md  multi_uav_sim_ba_3vtol.sh  multi_uav_sim_ba_4vtol.sh  multi_uav_sim_ba_6vtol.sh  plane_communication.py  plane_keyboard_control.py
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/src/fixed_wing_lib/: filter.hpp  mathlib.hpp  readme.txt  vector.hpp
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/src/fixed_wing_lib/vertical_controller/: tecs.hpp
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/src/formation_controller/: abs_formation_controller.cpp  abs_formation_controller.hpp  formation_controller.cpp  formation_controller.hpp
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/src/multi_uav_sim/followers_main/: follower0_main.cpp  follower1_main.cpp  follower2_main.cpp  follower3_main.cpp  follower4_main.cpp  follower5_main.cpp
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/src/multi_uav_sim/pack_fws_states/: pack_fw0_states.cpp  pack_fw1_states.cpp  pack_fw2_states.cpp  pack_fw3_states.cpp  pack_fw4_states.cpp  pack_fw5_states.cpp
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/src/multi_uav_sim/switch_fws_mode/: switch_fw0_mode.cpp  switch_fw1_mode.cpp  switch_fw2_mode.cpp  switch_fw3_mode.cpp  switch_fw4_mode.cpp  switch_fw5_mode.cpp
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/src/pack_fw_states/: fixed_wing_sub_pub.hpp  pack_fw_states.cpp  pack_fw_states.hpp
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/src/switch_fw_mode/: switch_fw_mode.cpp  switch_fw_mode.hpp
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/src/task_main/: task_main.cpp  task_main.hpp
XTDrone/coordination/fixed_wing_affine_formation_control/fixed_wing_formation_control/src/test/vir_leader/: vir_sim_leader.cpp
XTDrone/sitl_config/launch/: raptor_sitl_iris.launch
docs/: xtdrone-raptor-adaptation.md
raptor_external_modules/src/: CMakeLists.txt
raptor_external_modules/src/modules/actuator_motors_multiplexer/: actuator_motors_multiplexer.cpp  actuator_motors_multiplexer.hpp
raptor_external_modules/src/modules/rl_tools_commander/: RLtoolsCommander.cpp  RLtoolsCommander.hpp
raptor_external_modules/src/modules/rl_tools_policy/: RLtoolsPolicy.cpp  RLtoolsPolicy.hpp
